src/ccu/pllab/tcgen3/core/testmodelbuilder/oclparser/antlrgen/OclParser.java
// Generated from C:/Users/Sam/Desktop/workspace/2024_eclipcse_myReasearch/workspace20241216/workspace/tcgen3/src/ccu/pllab/tcgen3/core/testmodelbuilder/oclparser/Ocl.g4 by ANTLR 4.13.2
 
package ccu.pllab.tcgen3.core.testmodelbuilder.oclparser.antlrgen; 

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class OclParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, T__43=44, T__44=45, 
		T__45=46, T__46=47, T__47=48, T__48=49, T__49=50, T__50=51, T__51=52, 
		BRACKETS=53, SELF=54, RESULT=55, DOT=56, ARROW=57, ID=58, INTEGER=59, 
		STRING_LITERAL=60, LINE_COMMENT=61, PARA_COMMENT=62, WHITESPACE=63;
	public static final int
		RULE_packageDeclarationCS = 0, RULE_contextDecl = 1, RULE_classifierContextDecl = 2, 
		RULE_operationContextDecl = 3, RULE_context = 4, RULE_variableDecls = 5, 
		RULE_variableDecl = 6, RULE_pathNameCS = 7, RULE_type = 8, RULE_basetype = 9, 
		RULE_arrayType = 10, RULE_arrayListType = 11, RULE_primitiveType = 12, 
		RULE_collectionTypeIdentifierCS = 13, RULE_userClassType = 14, RULE_oclExpressionCS = 15, 
		RULE_expression = 16, RULE_logicalExpression = 17, RULE_relationalExpression = 18, 
		RULE_additiveExpression = 19, RULE_multiplicativeExpression = 20, RULE_unaryExpression = 21, 
		RULE_postfixExpression = 22, RULE_primaryExpression = 23, RULE_ifExpCS = 24, 
		RULE_letExprCS = 25, RULE_variableExpCS = 26, RULE_literalExpCS = 27, 
		RULE_arrayLiteralExpCS = 28, RULE_arrayListLiteralExpCS = 29, RULE_arrayLiteralPartsCS = 30, 
		RULE_collectionLiteralExpCS = 31, RULE_collectionLiteralPartsCS = 32, 
		RULE_collectionitem = 33, RULE_collectionRangeCS = 34, RULE_primitiveLiteralExpCS = 35, 
		RULE_integerLiteralExpCS = 36, RULE_realLiteralExpCS = 37, RULE_stringLiteralExpCS = 38, 
		RULE_booleanLiteralExpCS = 39, RULE_callExpCS = 40, RULE_featureCallExpCS = 41, 
		RULE_propertyCallExpCS = 42, RULE_operationCallExpCS = 43, RULE_argumentsCS = 44, 
		RULE_arrayAccessCS = 45, RULE_indexExpCS = 46, RULE_loopExpCS = 47, RULE_iterateExpCS = 48, 
		RULE_logicalOperator = 49, RULE_relationalOperator = 50, RULE_additiveOperator = 51, 
		RULE_multiplicativeOperator = 52, RULE_unaryOperator = 53, RULE_isMarkedPreCS = 54;
	private static String[] makeRuleNames() {
		return new String[] {
			"packageDeclarationCS", "contextDecl", "classifierContextDecl", "operationContextDecl", 
			"context", "variableDecls", "variableDecl", "pathNameCS", "type", "basetype", 
			"arrayType", "arrayListType", "primitiveType", "collectionTypeIdentifierCS", 
			"userClassType", "oclExpressionCS", "expression", "logicalExpression", 
			"relationalExpression", "additiveExpression", "multiplicativeExpression", 
			"unaryExpression", "postfixExpression", "primaryExpression", "ifExpCS", 
			"letExprCS", "variableExpCS", "literalExpCS", "arrayLiteralExpCS", "arrayListLiteralExpCS", 
			"arrayLiteralPartsCS", "collectionLiteralExpCS", "collectionLiteralPartsCS", 
			"collectionitem", "collectionRangeCS", "primitiveLiteralExpCS", "integerLiteralExpCS", 
			"realLiteralExpCS", "stringLiteralExpCS", "booleanLiteralExpCS", "callExpCS", 
			"featureCallExpCS", "propertyCallExpCS", "operationCallExpCS", "argumentsCS", 
			"arrayAccessCS", "indexExpCS", "loopExpCS", "iterateExpCS", "logicalOperator", 
			"relationalOperator", "additiveOperator", "multiplicativeOperator", "unaryOperator", 
			"isMarkedPreCS"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'package'", "'endpackage'", "'context'", "'::'", "'('", "')'", 
			"':'", "'inv'", "'pre'", "'post'", "','", "'='", "'['", "']'", "'ArrayList'", 
			"'<'", "'>'", "'int'", "'String'", "'Boolean'", "'Set'", "'Bag'", "'Sequence'", 
			"'OrderedSet'", "'Collection'", "'if'", "'then'", "'else'", "'endif'", 
			"'let'", "'in'", "'{'", "'}'", "'..'", "'true'", "'false'", "'iterate'", 
			"';'", "'|'", "'and'", "'or'", "'xor'", "'implies'", "'>='", "'<='", 
			"'<>'", "'+'", "'-'", "'*'", "'/'", "'not'", "'@'", "'[]'", "'self'", 
			"'result'", "'.'", "'->'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, "BRACKETS", "SELF", "RESULT", "DOT", "ARROW", 
			"ID", "INTEGER", "STRING_LITERAL", "LINE_COMMENT", "PARA_COMMENT", "WHITESPACE"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Ocl.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public OclParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PackageDeclarationCSContext extends ParserRuleContext {
		public PathNameCSContext pathNameCS() {
			return getRuleContext(PathNameCSContext.class,0);
		}
		public List<ContextDeclContext> contextDecl() {
			return getRuleContexts(ContextDeclContext.class);
		}
		public ContextDeclContext contextDecl(int i) {
			return getRuleContext(ContextDeclContext.class,i);
		}
		public PackageDeclarationCSContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_packageDeclarationCS; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof OclListener ) ((OclListener)listener).enterPackageDeclarationCS(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof OclListener ) ((OclListener)listener).exitPackageDeclarationCS(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof OclVisitor ) return ((OclVisitor<? extends T>)visitor).visitPackageDeclarationCS(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PackageDeclarationCSContext packageDeclarationCS() throws RecognitionException {
		PackageDeclarationCSContext _localctx = new PackageDeclarationCSContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_packageDeclarationCS);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(110);
			match(T__0);
			setState(111);
			pathNameCS();
			setState(115);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__2) {
				{
				{
				setState(112);
				contextDecl();
				}
				}
				setState(117);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(118);
			match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ContextDeclContext extends ParserRuleContext {
		public ClassifierContextDeclContext classifierContextDecl() {
			return getRuleContext(ClassifierContextDeclContext.class,0);
		}
		public List<ContextContext> context() {
			return getRuleContexts(ContextContext.class);
		}
		public ContextContext context(int i) {
			return getRuleContext(ContextContext.class,i);
		}
		public OperationContextDeclContext operationContextDecl() {
			return getRuleContext(OperationContextDeclContext.class,0);
		}
		public ContextDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_contextDecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof OclListener ) ((OclListener)listener).enterContextDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof OclListener ) ((OclListener)listener).exitContextDecl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof OclVisitor ) return ((OclVisitor<? extends T>)visitor).visitContextDecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ContextDeclContext contextDecl() throws RecognitionException {
		ContextDeclContext _localctx = new ContextDeclContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_contextDecl);
		int _la;
		try {
			setState(134);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(120);
				classifierContextDecl();
				setState(124);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 1792L) != 0)) {
					{
					{
					setState(121);
					context();
					}
					}
					setState(126);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(127);
				operationContextDecl();
				setState(131);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 1792L) != 0)) {
					{
					{
					setState(128);
					context();
					}
					}
					setState(133);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ClassifierContextDeclContext extends ParserRuleContext {
		public PathNameCSContext pathNameCS() {
			return getRuleContext(PathNameCSContext.class,0);
		}
		public ClassifierContextDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_classifierContextDecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof OclListener ) ((OclListener)listener).enterClassifierContextDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof OclListener ) ((OclListener)listener).exitClassifierContextDecl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof OclVisitor ) return ((OclVisitor<? extends T>)visitor).visitClassifierContextDecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ClassifierContextDeclContext classifierContextDecl() throws RecognitionException {
		ClassifierContextDeclContext _localctx = new ClassifierContextDeclContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_classifierContextDecl);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(136);
			match(T__2);
			setState(137);
			pathNameCS();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class OperationContextDeclContext extends ParserRuleContext {
		public OperationContextDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_operationContextDecl; }
	 
		public OperationContextDeclContext() { }
		public void copyFrom(OperationContextDeclContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class NoReturnTypeAltContext extends OperationContextDeclContext {
		public PathNameCSContext pathNameCS() {
			return getRuleContext(PathNameCSContext.class,0);
		}
		public TerminalNode ID() { return getToken(OclParser.ID, 0); }
		public VariableDeclsContext variableDecls() {
			return getRuleContext(VariableDeclsContext.class,0);
		}
		public NoReturnTypeAltContext(OperationContextDeclContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof OclListener ) ((OclListener)listener).enterNoReturnTypeAlt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof OclListener ) ((OclListener)listener).exitNoReturnTypeAlt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof OclVisitor ) return ((OclVisitor<? extends T>)visitor).visitNoReturnTypeAlt(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class HasRturnTypeAltContext extends OperationContextDeclContext {
		public PathNameCSContext pathNameCS() {
			return getRuleContext(PathNameCSContext.class,0);
		}
		public TerminalNode ID() { return getToken(OclParser.ID, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public VariableDeclsContext variableDecls() {
			return getRuleContext(VariableDeclsContext.class,0);
		}
		public HasRturnTypeAltContext(OperationContextDeclContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof OclListener ) ((OclListener)listener).enterHasRturnTypeAlt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof OclListener ) ((OclListener)listener).exitHasRturnTypeAlt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof OclVisitor ) return ((OclVisitor<? extends T>)visitor).visitHasRturnTypeAlt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final OperationContextDeclContext operationContextDecl() throws RecognitionException {
		OperationContextDeclContext _localctx = new OperationContextDeclContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_operationContextDecl);
		int _la;
		try {
			setState(161);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				_localctx = new NoReturnTypeAltContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(139);
				match(T__2);
				setState(140);
				pathNameCS();
				setState(141);
				match(T__3);
				setState(142);
				match(ID);
				setState(143);
				match(T__4);
				setState(145);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 288230376216723456L) != 0)) {
					{
					setState(144);
					variableDecls();
					}
				}

				setState(147);
				match(T__5);
				}
				break;
			case 2:
				_localctx = new HasRturnTypeAltContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(149);
				match(T__2);
				setState(150);
				pathNameCS();
				setState(151);
				match(T__3);
				setState(152);
				match(ID);
				setState(153);
				match(T__4);
				setState(155);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 288230376216723456L) != 0)) {
					{
					setState(154);
					variableDecls();
					}
				}

				setState(157);
				match(T__5);
				setState(158);
				match(T__6);
				setState(159);
				type();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ContextContext extends ParserRuleContext {
		public OclExpressionCSContext oclExpressionCS() {
			return getRuleContext(OclExpressionCSContext.class,0);
		}
		public TerminalNode ID() { return getToken(OclParser.ID, 0); }
		public ContextContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_context; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof OclListener ) ((OclListener)listener).enterContext(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof OclListener ) ((OclListener)listener).exitContext(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof OclVisitor ) return ((OclVisitor<? extends T>)visitor).visitContext(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ContextContext context() throws RecognitionException {
		ContextContext _localctx = new ContextContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_context);
		int _la;
		try {
			setState(181);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__7:
				enterOuterAlt(_localctx, 1);
				{
				setState(163);
				match(T__7);
				setState(165);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==ID) {
					{
					setState(164);
					match(ID);
					}
				}

				setState(167);
				match(T__6);
				setState(168);
				oclExpressionCS();
				}
				break;
			case T__8:
				enterOuterAlt(_localctx, 2);
				{
				setState(169);
				match(T__8);
				setState(171);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==ID) {
					{
					setState(170);
					match(ID);
					}
				}

				setState(173);
				match(T__6);
				setState(174);
				oclExpressionCS();
				}
				break;
			case T__9:
				enterOuterAlt(_localctx, 3);
				{
				setState(175);
				match(T__9);
				setState(177);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==ID) {
					{
					setState(176);
					match(ID);
					}
				}

				setState(179);
				match(T__6);
				setState(180);
				oclExpressionCS();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class VariableDeclsContext extends ParserRuleContext {
		public List<VariableDeclContext> variableDecl() {
			return getRuleContexts(VariableDeclContext.class);
		}
		public VariableDeclContext variableDecl(int i) {
			return getRuleContext(VariableDeclContext.class,i);
		}
		public VariableDeclsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variableDecls; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof OclListener ) ((OclListener)listener).enterVariableDecls(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof OclListener ) ((OclListener)listener).exitVariableDecls(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof OclVisitor ) return ((OclVisitor<? extends T>)visitor).visitVariableDecls(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VariableDeclsContext variableDecls() throws RecognitionException {
		VariableDeclsContext _localctx = new VariableDeclsContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_variableDecls);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(183);
			variableDecl();
			setState(188);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__10) {
				{
				{
				setState(184);
				match(T__10);
				setState(185);
				variableDecl();
				}
				}
				setState(190);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
